[package]
name = "access_db"
version = "0.2.0"
edition = "2021"
authors = ["zomem"]
description = "数据库连接"
license = "MIT"
readme = "README.md"
include = ["/src"]
repository = "https://github.com/zomem/access_db_rust"
keywords = ["mysql", "sql"]
categories = ["database"]

[dependencies]
mysql = "22.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
regex = "1.6"